    collect_set udaf
    (He Yongqiang via jvs)

    HIVE-1422 (2nd trial). skip counter update when RunningJob.getCounters()
    returns null
    (Joydeep Sen Sarma via Ning Zhang)

    HIVE-1535 Dont change table metadata while changing partition metadata
    (He Yongqiang via namit)

    HIVE-1532 Replace globStatus with listStatus inside Hive.java's replaceFiles
    (He Yongqiang via namit)

  TESTS

    HIVE-1464. improve  test query performance
    (Joydeep Sen Sarma via Ning Zhang)

    HIVE-1475. .gitignore files being placed in test warehouse directories
    causing build failure
    (Joydeep Sen Sarma via Ning Zhang)

    HIVE-1489. TestCliDriver -Doverwrite=true does not put the file in
    the correct directory
    (Ning Zhang via jvs)

Release 0.6.0 -  Unreleased

  INCOMPATIBLE CHANGES

  NEW FEATURES

    HIVE-964. Handle skew join
    (Yongqiang He via namit)

    HIVE-972. Support views. (John Sichi via zshao)

    HIVE-1172. Add UDFS to create struct (Zheng Shao via Ning Zhang)

    HIVE-894. add udaf max_n, min_n to contrib (Zheng Shao via Yongqiang He)

    HIVE-1152. Add metastore API method to drop/append partition by name.
    (Paul Yang via zshao)

    HIVE-1147. Update Eclipse project configuration to match Checkstyle
    (Carl Steinbach via zshao)

    HIVE-1117. Make queryPlan serializable
    (Zheng Shao via namit)

    HIVE-917. Bucketed Map Join
    (He Yongqiang via namit)

    HIVE-1178. enforce bucketing for a table.
    (Namit Jain via He Yongqiang)

    HIVE-1188. NPE when TestJdbcDriver/TestHiveServer
    (Call Steinbach via Ning Zhang)

    HIVE-1032. Better Error Messages for Execution Errors.
    (Paul Yang via zshao)

    HIVE-1193. ensure sorting properties for a table.
    (Namit via He Yongqiang)

    HIVE-259. Add PERCENTILE aggregate function.
    (Jerome Boulon, Zheng via He Yongqiang)

    HIVE-1197. Add BucketizedHiveInputFormat
    (Siying Dong via namit)

    HIVE-1194. Add sort merge join